add line account

--- a/pages/delivers.html
+++ b/pages/delivers.html
@@ -6,8 +6,27 @@ permalink: /delivers/
 
 <div class="row">
   <hr class="divider">
+  <div class="small-12 columns" style="margin:30px">
+    <h4 style="text-align: center;">蜂蜜大王Line帳號QR code</h3>
+    <div class="small-4 columns">
+      <a href="https://lin.ee/0PG4ZpF">
+        <img alt="LineQR" id="line_qr_code" src="{{ site.url }}/assets/img/line_qr.png" width=200 height=200 style="float:right">
+      </a>
+    </div>
+    <div class="small-8 columns">
+      <p>「外送訂購」請掃瞄或點擊此QR code加店主Line好友，傳給店主以下資訊：</p>
+      <p>1. 飲料種類和杯數/瓶數</p>
+      <p>2. 您的大名</p>
+      <p>3. 送達地點</p>
+      <p>4. 預計送達時間</p>
+      <p>店主回覆給您訂單總價，您回覆同意之後，訂單才算成交喔！</p>
+      <p>店主會請計程車外送（運費新竹市區約100~150元，園區約250~350元）</p>
+      <p>感謝您！</p>
+    </div>
+  </div>
+  <hr>
   <div class="small-12 columns" id="price_table_wrap">
-    <img alt="Price" id="price_table" src="https://s3-ap-northeast-1.amazonaws.com/honibos/images/price.png">
     <h4>蜂蜜大王價目表</h4>
+    <img alt="LineQR" id="line_qr_code" src="{{ site.url }}/assets/img/price.jpg">
   </div>
 </div>
