--- a/pages/delivers.html
+++ b/pages/delivers.html
@@ -14,7 +14,7 @@ permalink: /delivers/
       </a>
     </div>
     <div class="small-8 columns">
-      <p>「外送訂購」請掃瞄或點擊此QR code加店主Line好友，傳給店主以下資訊：</p>
+      <p>「外送訂購」請掃瞄QR code或<a href="https://lin.ee/0PG4ZpF">點擊此連結</a>加店主Line好友，傳給店主以下資訊：</p>
       <p>1. 飲料種類和杯數/瓶數</p>
       <p>2. 您的大名</p>
       <p>3. 送達地點</p>
