better explained rules

--- a/pages/delivers.html
+++ b/pages/delivers.html
@@ -17,8 +17,9 @@ permalink: /delivers/
       <p>「外送訂購」請掃瞄QR code或<a href="https://lin.ee/0PG4ZpF">點擊此連結</a>加店主Line好友，傳給店主以下資訊：</p>
       <p>1. 飲料種類和杯數/瓶數</p>
       <p>2. 您的大名</p>
-      <p>3. 送達地點</p>
-      <p>4. 預計送達時間</p>
+      <p>3. 您的聯絡電話</p>
+      <p>4. 送達地址(若是大樓，請說明在第幾樓)</p>
+      <p>5. 預計送達時間</p>
       <p>店主回覆給您訂單總價，您回覆同意之後，訂單才算成交喔！</p>
       <p>店主會請計程車外送（運費新竹市區約100~150元，園區約250~350元）</p>
       <p>感謝您！</p>
