modify deliver description

--- a/pages/delivers.html
+++ b/pages/delivers.html
@@ -18,10 +18,11 @@ permalink: /delivers/
       <p>1. 飲料種類和杯數/瓶數</p>
       <p>2. 您的大名</p>
       <p>3. 您的聯絡電話</p>
-      <p>4. 送達地址(若是大樓，請說明在第幾樓)</p>
+      <p>4. 送達地址</p>
       <p>5. 預計送達時間</p>
       <p>店主回覆給您訂單總價，您回覆同意之後，訂單才算成交喔！</p>
       <p>店主會請計程車外送（運費新竹市區約100~150元，園區約250~350元）</p>
+      <p>請將帳款匯給店主第一銀行戶頭(店主會通知您戶頭帳號)</p>
       <p>感謝您！</p>
     </div>
   </div>
