--- a/pages/qa.html
+++ b/pages/qa.html
@@ -11,7 +11,7 @@ permalink: /home/qa/
     <div class="story" id="qa_panel">
       <p class="qa_q">Ｑ：價目表在哪裡？我怎麼找不到？</p>
       <p class="qa_a">Ａ：在訂購頁下方有，這邊再送你一次！<br>
-        <img alt="Price" src="https://s3-ap-northeast-1.amazonaws.com/honibos/images/price.png" style="max-width: 400px;"><br>
+        <img alt="Price" src="{{ site.url }}/assets/img/price.jpg" style="max-width: 400px;"><br>
         (小杯500cc, 大杯700cc, 小瓶1500cc, 大瓶2000cc)
       </p>
       <hr class="divider">
